# test-update

./: PrintDefectDetector.spec  README.md  build.bat  main.py  pyproject.toml  version.json
app/: main.py  updater.py
app/installer/: setup.iss
app/ui/: main_window.py  update_dialog.py
