[project]
name = "test-update"
version = "2.0.0"
description = "Test app with auto update"
requires-python = ">=3.11"
dependencies = [
    "pyside6",
    "requests",
    "packaging"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"